# NoDepRAGAgent

./: .sample_env  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: rag.db
logs/: chat.json
scripts/: exercise_all_tools.py  load_dummy_data.py  load_weaviate_dummy_docs.py
src/nodepragagent/: __init__.py  cli.py  config.py  embeddings.py  errors.py  logging_utils.py  memory.py  tools.py  utils.py  vllm.py
src/nodepragagent/db/: __init__.py  models.py
src/nodepragagent/vector/: __init__.py
tests/: __init__.py  conftest.py  test_system_prompt_asset.py  test_vllm_client.py
tests/assets/: system_prompt.txt
